<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.priya.calculator.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/emptyField"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="5dp" />
        <TextView
            android:id="@+id/entryField"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border"
            android:hint="Enter Calculation"
            android:textColorHint="@color/white"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="5dp" />

        <TextView
            android:id="@+id/answerField"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/opening_parantheses"
                android:layout_width="47dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape_corners_top_left"
                android:text="@string/opening_parantheses"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/closing_parantheses"
                android:layout_width="42dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/closing_parantheses"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/backspace_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/backspace"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/divide_button"
                android:layout_width="88dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape_corners_top_right"
                android:text="@string/divide_Button"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button8"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button9"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiply_button"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/button5"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/button6"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:id="@+id/subtract_button"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtract" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/button3"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three" />

            <Button
                android:id="@+id/add_button"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/zero_button"
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_shape_corners_bottom_left"
                android:text="@string/zero"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/period"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dot" />

            <Button
                android:id="@+id/equal_Button"
                android:textColor="@color/white"
                android:background="@drawable/button_shape_corners_bottom_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equals" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
